<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.data.build</groupId>
		<artifactId>spring-data-parent</artifactId>
		<version>3.0.0-SNAPSHOT</version>
	</parent>

	<groupId>org.springframework.data</groupId>
	<artifactId>spring-data-geode-parent</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Spring Data for Apache Geode Parent</name>
	<description>Spring Data for Apache Geode Parent Maven POM</description>
	<url>https://projects.spring.io/spring-data-geode/</url>

	<organization>
		<name>Pivotal Software, Inc.</name>
		<url>https://www.spring.io</url>
	</organization>

	<developers>
		<developer>
			<id>jblum</id>
			<name>John Blum</name>
			<organization>Pivotal</organization>
			<organizationUrl>https://www.pivotal.io</organizationUrl>
			<roles>
				<role>Lead Developer</role>
			</roles>
		</developer>
	</developers>

	<modules>
		<module>spring-data-geode</module>
		<module>spring-data-geode-distribution</module>
	</modules>

	<properties>
		<java-module-name>spring.data.geode</java-module-name>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
		<source.level>17</source.level>
	</properties>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<dependencySourceExcludes>
						<dependencySourceExclude>org.apache.geode:geode-gfsh</dependencySourceExclude>
					</dependencySourceExcludes>
					<failOnWarnings>false</failOnWarnings>
					<links combine.children="append">
						<link>https://geode.apache.org/releases/latest/javadoc/</link>
					</links>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.remote.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
					<includes>
						<include>**/*Tests.java</include>
						<include>**/*Test.java</include>
					</includes>
					<reuseForks>false</reuseForks>
					<systemProperties>
						<java.util.logging.config.file>${basedir}/src/test/resources/java-util-logging.properties</java.util.logging.config.file>
						<gemfire.disableShutdownHook>true</gemfire.disableShutdownHook>
						<logback.log.level>error</logback.log.level>
						<spring.profiles.active>apache-geode</spring.profiles.active>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jdeprscan-plugin</artifactId>
				<version>3.0.0-alpha-1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<repositories>

		<repository>
			<id>spring-libs-snapshot</id>
			<url>https://repo.spring.io/libs-snapshot</url>
		</repository>

<!--
		<repository>
			<id>apache-geode-snapshots</id>
			<name>Apache Geode Snapshots</name>
			<url>https://maven.apachegeode-ci.info/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
-->

<!--
		<repository>
			<id>apache-snapshots</id>
			<url>https://repository.apache.org/content/repositories/orgapachegeode-1128</url>
		</repository>
-->

	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>spring-plugins-release</id>
			<url>https://repo.spring.io/plugins-release</url>
		</pluginRepository>
	</pluginRepositories>

</project>
